# FractalFlames_OpenCL

./: CMakeLists.txt  readme.md
include/: Fractal_OCL.h  flam3.h  flam3Data.h  ocl_errors.h
src/: FractalFlame.cpp  Fractal_OCL.cpp  flam3Data.cpp
src/kernels/: kernels.cc
